# rs-integration

./: .gitignore  .gitpod.yml  Cargo.toml  README.md  build.rs  docker-compose.yml
.github/workflows/: rust.yml
api-cache-example/: 20240101000000_create_products.sql  Cargo.toml  README.md  cache.rs  cache_guarantees.rs  db.rs  error.rs  handlers.rs  main.rs  model.rs
clap/: Cargo.toml
elasticsearch/: Cargo.toml
gelf-log/: Cargo.toml
graphql/: Cargo.toml  test.k6.js
grpc/: Cargo.toml
grpc/proto/: example.proto  test.k6.js
grpc/src/: client.rs  server.rs
hurl/: test.hurl
init/elasticsearch/: create-index.sh
kafka/: Cargo.toml  README.md
loki/: Cargo.toml
mcp-client/: Cargo.toml
mcp-server/: Cargo.toml
memcached/: Cargo.toml
mongodb/: Cargo.toml
mongodb/src/: main.rs
nanoid/: Cargo.toml
rabbitmq/: Cargo.toml  README.md
rabbitmq/src/: main.rs
redis/: Cargo.toml
redis/src/: main.rs
rust-graphql-crud/: .env  Cargo.toml  README.md
rust-graphql-crud/migrations/: 001_create_users_table.sql
rust-graphql-crud/src/: main.rs
rust-graphql-crud/src/config/: mod.rs
rust-graphql-crud/src/database/: connection.rs  mod.rs
rust-graphql-crud/src/errors/: mod.rs
rust-graphql-crud/src/models/: user.rs
rust-graphql-crud/src/schema/: mod.rs  mutation.rs  query.rs
rust-graphql-crud/src/services/: user_service.rs
rust-tui-app/: Cargo.toml  README.md
rust-tui-app/src/: main.rs
sqlite/: Cargo.toml
sqlite/src/: main.rs
