[workspace]
resolver = "2"
members = [
    "clap",
    "kafka",
    "loki", "mongodb",
    "nanoid",
    "rabbitmq",
    "redis",
    "mongodb",
]
default-members = [
    "clap",
    "kafka",
    "loki",
    "nanoid",
    "rabbitmq",
    "redis",
    "mongodb",
]



[workspace.dependencies]
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
kafka = "0.10.0"
lapin = "2.5.0"
nanoid = "0.4.0"
rabbitmq-stream-client = "0.5.0"
redis = "0.27.4"
tokio = { version = "1.40.0", features = ["full"] }
tokio-stream = "0.1.16"
tracing = "0.1.40"
tracing-loki = "0.2.5"
tracing-subscriber = "0.3.18"
url = "2.5.2"
uuid = { version = "1.11.0", features = ["v4"] }
