[package]
name = "elasticsearch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "elasticsearch_query"
path = "bin/elasticsearch_query.rs"
[[bin]]
name = "index_questions_answers"
path = "bin/index_questions_answers.rs"
[[bin]]
name = "search_questions"
path = "bin/search_questions.rs"
[[bin]]
name = "search_question_answers"
path = "bin/search_question_answers.rs"

[dependencies]
elasticsearch.workspace = true
serde_json = "1.0.140"
tokio.workspace = true
clap.workspace = true
xml = "0.8.20"
url.workspace = true
serde = "1.0.219"
chrono = "0.4.40"
http = "1.3.1"
textwrap = "0.16.2"
