[package]
name = "grpc"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "grpc_server"
path = "src/server.rs"
[[bin]]
name = "grpc_client"
path = "src/client.rs"

[dependencies]
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.40.0", features = ["full"] }
tonic = "0.7"
prost = "0.10"
[build-dependencies]
tonic-build = "0.7"
