[package]
name = "kafka"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kafka_consumer_test"
path = "bin/kafka_consumer.rs"
[[bin]]
name = "kafka_producer_test"
path = "bin/kafka_producer.rs"
[[bin]]
name = "kafka_partition_test"
path = "bin/kafka_partition.rs"



[dependencies]
kafka.workspace = true
rdkafka = { version = "0.36", features = ["cmake-build"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
chrono = "0.4.40"