[package]
name = "mcp-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mcp_client_everything_stdio"
path = "bin/everything_stdio.rs"
[[bin]]
name = "mcp_client_sse"
path = "bin/sse.rs"
[[bin]]
name = "mcp_client_std_io"
path = "bin/std_io.rs"
[[bin]]
name = "mcp_client_collection"
path = "bin/collection.rs"


[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "client",
    "transport-sse",
    "transport-child-process",
    "tower"
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
futures = "0.3"
anyhow = "1.0"
tower = "0.5"