[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "mcp_server_sse"
path = "bin/sse.rs"
[[bin]]
name = "mcp_server_std_io"
path = "bin/std_io.rs"

[[bin]]
name = "mcp_server_http_stream"
path = "bin/axum_streamable_http.rs"


[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", branch = "main", features = [
    "server", "transport-sse-server", "transport-io", "transport-streamable-http-server", "auth"
] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
futures = "0.3"
rand = { version = "0.9" }
axum = { version = "0.8", features = ["macros"] }
schemars = { version = "0.8", optional = true }
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
serde_urlencoded = "0.7"
askama = { version = "0.14"}

# [dev-dependencies.'cfg(target_arch="linux")'.dependencies]

[dev-dependencies]
tokio-stream = { version = "0.1" }
# tokio-util = { version = "0.7", features = ["io", "codec"] }
tokio-util = { version = "0.7", features = ["codec"] }
