[package]
name = "mongodb"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { version = "1.0.0", default-features = false, features=["sync"] }
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio.workspace = true
chrono = "0.4.11"
serde = "1.0.105"
serde_json = "1.0.53"