
[package]
name = "rust-graphql-crud"
version = "0.1.0"
edition = "2024"

[dependencies]
# GraphQL
async-graphql = { version = "7.0", features = ["uuid", "chrono"] }
async-graphql-axum = "7.0"

# Web framework
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate", "macros", "derive"], default-features = false }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment
dotenvy = "0.15"

# Validation
validator = { version = "0.16", features = ["derive"] }
